# anki-temps

./: .gitignore  .pre-commit-config.yaml  README.md  REUSE.toml  main.py  pyproject.toml
